layout bug fixes

--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ a:hover {
 .featured-img-caption {
 color: #aaa;
 text-align: left;
-font-size: 14px;
+font-size: 12px;
 line-height:14px;
 padding-top:15px;
 padding-bottom: 15px;
